--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,21 +1,29 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-<div class="container-fluid">
-  <a class="navbar-brand" href="#">Navbar</a>
+<div class="container-fluid" style="margin-left: 15em; margin-right:15em">
+  <img src ="../../assets/img/Export/SVG/semi_androidMyCargonaut.svg" href="#" width="100" height="40"/>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
+        <a class="nav-link active" aria-current="page" href="#" style="color: #005B51">Mitfahrgelegenheit</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link active" href="#" style="color: #005B51">Meine Angebote & Anfragen</a>
       </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-          Dropdown
+    </ul>
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <li class="nav-item">
+        <div>
+          <img src="../../assets/img/Export/Icons/search_icon.png" width="20" height="20" style="float: left">
+          <a class="nav-link active" href="#" style="color: #005B51;float: left">Suchen</a>
+        </div>
+        <!--
+        <a class="nav-link" href="#" aria-expanded="false">
+          Suchen
         </a>
+        -->
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
           <li><a class="dropdown-item" href="#">Action</a></li>
           <li><a class="dropdown-item" href="#">Another action</a></li>
