--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,44 +1,40 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light py-2">
 <div class="container-fluid" style="margin-left: 15em; margin-right:15em">
-  <img src ="../../assets/img/Export/SVG/semi_androidMyCargonaut.svg" href="#" width="100" height="40"/>
+  <button style="border: none;  background-color: Transparent;">
+    <img src ="../../assets/img/Export/SVG/LKW.svg" width="180" height="75"/>
+  </button>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+  <div class="collapse navbar-collapse mr-auto" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#" style="color: #005B51">Mitfahrgelegenheit</a>
+        <a class="nav-link active" aria-current="page" href="#" style="color: #005B51; font-size: 20px; font-style: italic; font-family: Arial">Mitfahrgelegenheit</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="#" style="color: #005B51">Meine Angebote & Anfragen</a>
-      </li>
-    </ul>
-    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      <li class="nav-item">
-        <div>
-          <img src="../../assets/img/Export/Icons/search_icon.png" width="20" height="20" style="float: left">
-          <a class="nav-link active" href="#" style="color: #005B51;float: left">Suchen</a>
-        </div>
-        <!--
-        <a class="nav-link" href="#" aria-expanded="false">
-          Suchen
-        </a>
-        -->
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="#">Action</a></li>
-          <li><a class="dropdown-item" href="#">Another action</a></li>
-          <li><hr class="dropdown-divider"></li>
-          <li><a class="dropdown-item" href="#">Something else here</a></li>
-        </ul>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        <a class="nav-link active" href="#" style="color: #005B51; font-size: 20px; font-style: italic; font-family: Arial">Meine Angebote & Anfragen</a>
       </li>
     </ul>
-    <form class="d-flex">
-      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success" type="submit">Search</button>
-    </form>
+    <ul class="navbar-nav me-auto my-2 my-lg-0">
+      <li class="nav-item" style="margin-right: 14px" href="#">
+        <button style="border: none;  background-color: Transparent;">
+          <img src="../../assets/img/Export/Icons/search_icon.png" width="30" height="30" style="float: left; margin-top: 7px">
+          <a class="nav-link active" style="color: #005B51;float: left; font-size: 20px; font-style: italic; font-family: Arial">Suchen</a>
+        </button>
+      </li>
+      <li class="nav-item" style="margin-right: 12px">
+        <button style="border: none;  background-color: Transparent;">
+          <img src="../../assets/img/Export/Icons/user_icon.png" width="30" height="30" style="float: left; margin-top: 7px">
+          <a class="nav-link active" href="#" style="color: #005B51;float: left; font-size: 20px; font-style: italic; font-family: Arial">Angebot & Anfrage erstellen</a>
+        </button>
+      </li>
+      <li>
+        <button style="border: none;  background-color: Transparent;">
+          <img src="../../assets/img/Export/Icons/user_icon.png" width="43" height="43" style="float: left;">
+        </button>
+      </li>
+    </ul>
+
   </div>
 </div>
 </nav>
