Added infocards and searchbar. Both still not finished

--- a/src/app/suchleiste/suchleiste.component.css
+++ b/src/app/suchleiste/suchleiste.component.css
@@ -7,3 +7,13 @@ header.masthead {
   padding-top: 8rem;
   padding-bottom: 8rem;
 }
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: white;
+  opacity: 1; /* Firefox */
+}
+
+.center {
+  margin: auto;
+  width: 70%;
+}
