--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
 <app-navbar></app-navbar>
 <app-suchleiste></app-suchleiste>
+<div class="container">
+  <div class="row">
+    <app-infobox></app-infobox>
+    <app-infobox></app-infobox>
+    <app-infobox></app-infobox>
+  </div>
+</div>
