--- a/src/app/suchleiste/suchleiste.component.html
+++ b/src/app/suchleiste/suchleiste.component.html
@@ -1,47 +1,26 @@
 <header class="masthead">
-  <div class="container position-relative">
-    <div class="row justify-content-center">
-      <div class="col-xl-6">
-        <div class="text-center text-white">
-          <!-- Page heading-->
-          <h1 class="mb-5" style="color: #005B51">Wir fahren, du sparst!</h1>
-          <!-- Signup form-->
-          <!-- * * * * * * * * * * * * * * *-->
-          <!-- * * SB Forms Contact Form * *-->
-          <!-- * * * * * * * * * * * * * * *-->
-          <!-- This form is pre-integrated with SB Forms.-->
-          <!-- To make this form functional, sign up at-->
-          <!-- https://startbootstrap.com/solution/contact-forms-->
-          <!-- to get an API token!-->
-          <form class="form-subscribe" id="contactForm" data-sb-form-api-token="API_TOKEN">
-            <!-- Email address input-->
-            <div class="row">
-              <div class="col">
-                <input class="form-control form-control-lg" id="emailAddress" type="email" placeholder="Email Address" data-sb-validations="required,email" />
-                <div class="invalid-feedback text-white" data-sb-feedback="emailAddress:required">Email Address is required.</div>
-                <div class="invalid-feedback text-white" data-sb-feedback="emailAddress:email">Email Address Email is not valid.</div>
-              </div>
-              <div class="col-auto"><button class="btn btn-primary btn-lg disabled" id="submitButton" type="submit">Submit</button></div>
-            </div>
-            <!-- Submit success message-->
-            <!---->
-            <!-- This is what your users will see when the form-->
-            <!-- has successfully submitted-->
-            <div class="d-none" id="submitSuccessMessage">
-              <div class="text-center mb-3">
-                <div class="fw-bolder">Form submission successful!</div>
-                <p>To activate this form, sign up at</p>
-                <a class="text-white" href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
+    <div class="center">
+       <h1 style="color: #005B51; text-align: center; margin-bottom: 20px">Wir fahren, du sparst!</h1>
+          <div class="form-row" style="background-color: rgba(0, 0, 0, 0.3); backdrop-filter: blur(5px); border-radius: 20px; position: center">
+            <div class="col">
+              <div class="input-group mb-3">
+                  <span class="input-group-text" style="background-color: rgba(0, 0, 0, 0.0); border-color: rgba(0, 0, 0, 0.0)"><img src="../../assets/img/Icons/von_icon.png" style="width: 20px"/> </span>
+                <input type="text" placeholder="Von..." style="background-color: rgba(0, 0, 0, 0.0); color: white; border-color: rgba(0, 0, 0, 0.0); /*outline: none das hier noch auskommentieren -Serag*/">
               </div>
             </div>
-            <!-- Submit error message-->
-            <!---->
-            <!-- This is what your users will see when there is-->
-            <!-- an error submitting the form-->
-            <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
-          </form>
-        </div>
-      </div>
+            <div class="col">
+              <div class="input-group mb-3">
+                <span class="input-group-text" style="background-color: rgba(0, 0, 0, 0.0); border-color: rgba(0, 0, 0, 0.0)"><img src="../../assets/img/Icons/nach_icon.png" style="width: 20px"/> </span>
+                <input type="text" placeholder="Nach..." style="background-color: rgba(0, 0, 0, 0.0); color: white; border-color: rgba(0, 0, 0, 0.0); /*outline: none das hier noch auskommentieren -Serag*/">
+              </div>
+            </div>
+            <div class="col">
+              <div class="input-group mb-3">
+                <span class="input-group-text" style="background-color: rgba(0, 0, 0, 0.0); border-color: rgba(0, 0, 0, 0.0)"><img src="../../assets/img/Icons/kalender_icon.png" style="width: 20px"/> </span>
+                <input type="text" placeholder="Datum" style="background-color: rgba(0, 0, 0, 0.0); color: white; border-color: rgba(0, 0, 0, 0.0); /*outline: none das hier noch auskommentieren -Serag*/">
+              </div>
+            </div>
+          </div>
+
     </div>
-  </div>
 </header>
