--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,31 +1,141 @@
-<div class="modal-header">
-  <div class="modal-title h4">Register</div>
-  <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss()">
-    <span aria-hidden="true">&times;</span>
-  </button>
+<!--  Modal Header -->
+<div class="modal-header border-0">
+  <div class="container">
+    <div class="row">
+      <div class="col-3"></div>
+      <div class="col-6 justify-content-center">
+        <div class="modal-title text-center h4 mx-auto logoGreenDark">Registrieren</div>
+      </div>
+      <div class="col-2"></div>
+      <div class="col-1 p-0">
+        <button type="button" class="close logoGreenDark" aria-label="Close" style="position: absolute"
+                (click)="activeModal.dismiss()">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+
+    </div>
+  </div>
 </div>
 
+
+<!--  Modal Body  -->
 <div class="modal-body">
-  <div class="form-group">
-    <label for="userEmail">Email</label>
-    <input #mail type="text" class="form-control {{wrongEmailClass}}" id="userEmail" [(ngModel)]="email" (keydown)="validEmail(mail.value)">
-    <div *ngIf="emailMessage !== ''" class="text-danger">{{emailMessage}}</div>
+
+  <div class="container">
+
+    <div class="row">
+      <div class="col">
+        <div class="form-group">
+          <label for="userLastname">Nachname</label>
+          <input #ln type="text" class="form-control {{wrongLastname}}" id="userLastname" [(ngModel)]="lastname"
+                 (keydown)="validLastname(ln.value)">
+          <div *ngIf="lastnameMessage !== ''" class="text-danger">{{lastnameMessage}}</div>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="form-group">
+          <label for="userFirstname">Vorname</label>
+          <input #fn type="text" class="form-control {{wrongFirstname}}" id="userFirstname" [(ngModel)]="firstname"
+                 (keydown)="validFirstname(fn.value)">
+          <div *ngIf="firstnameMessage !== ''" class="text-danger">{{firstnameMessage}}</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+
+      <div class="col">
+        <div class="form-group">
+          <label for="">Geschlecht</label>
+          <select name="" id="" class="form-control" [(ngModel)]="gender">
+            <option value=""></option>
+            <option value="0">Weiblich</option>
+            <option value="1">Männlich</option>
+            <option value="2">Divers</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="form-group">
+          <label for="userBirthday">Geburtstag</label>
+          <input #bd type="date" class="form-control {{wrongBirthday}}" id="userBirthday" [(ngModel)]="birthday"
+                 (keydown)="validBirthday(bd.value)">
+          <div *ngIf="birthdayMessage !== ''" class="text-danger">{{birthdayMessage}}</div>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="row">
+      <div class="col">
+        <div class="form-group">
+          <label for="userEmail">Email</label>
+          <input #mail type="text" class="form-control {{wrongEmailClass}}" id="userEmail" [(ngModel)]="email"
+                 (keydown)="validEmail(mail.value)">
+          <div *ngIf="emailMessage !== ''" class="text-danger">{{emailMessage}}</div>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="form-group">
+          <label for="userUsername">Nutzername</label>
+          <input #un type="text" class="form-control {{wrongUsername}}" id="userUsername" [(ngModel)]="username"
+                 (keydown)="validUsername(un.value)">
+          <div *ngIf="usernameMessage !== ''" class="text-danger">{{usernameMessage}}</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col">
+        <div class="form-group">
+          <label for="userPassword">Passwort</label>
+          <input #pw type="password" class="form-control {{wrongPasswordClass}}" id="userPassword"
+                 [(ngModel)]="password"
+                 (keydown)="validPassword(pw.value)">
+          <div *ngIf="passwordMessage !== ''" class="text-danger">{{passwordMessage}}</div>
+        </div>
+      </div>
+
+      <div class="col">
+
+        <div class="form-group">
+          <label for="repeatPassword">Passwort wiederholen</label>
+          <input #rpw type="password" class="form-control {{wrongRepeatPasswordClass}}" id="repeatPassword"
+                 [(ngModel)]="repeatPassword" (keydown)="validRepeatPassword(rpw.value)">
+          <div *ngIf="passwordRepeatMessage !== ''" class="text-danger">{{passwordRepeatMessage}}</div>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="form-group">
-    <label for="userPassword">Password</label>
-    <input #pass type="password" class="form-control {{wrongPasswordClass}}" id="userPassword" [(ngModel)]="password" (keydown)="validPassword(pass.value)">
-    <div *ngIf="passwordMessage !== ''" class="text-danger">{{passwordMessage}}</div>
-  </div>
-  <div class="form-group">
-    <label for="repeatPassword">Repeat password</label>
-    <input #rpass type="password" class="form-control {{wrongRepeatPasswordClass}}" id="repeatPassword" [(ngModel)]="repeatPassword" (keydown)="validRepeatPassword(rpass.value)">
-    <div *ngIf="passwordRepeatMessage !== ''" class="text-danger">{{passwordRepeatMessage}}</div>
-  </div>
+
 </div>
 
+<!-- Modal Footer -->
 <div class="modal-footer">
-  <button type="button" class="btn btn-outline-dark" (click)="activeModal.dismiss()">Close</button>
-  <button type="button" class="btn btn-success" (click)="register()">Register</button>
+
+  <div class="container ">
+    <div class="row justify-content-center">
+      <div class="col-6 ">
+        <button type="button" class="btn btn-success mx-auto m-3 btn-block"
+                (click)="register()">Registrieren
+        </button>
+      </div>
+    </div>
+
+    <div class="row justify-content-center">
+      <div class="col-6">
+        <button type="button" class="btn btn-danger mx-auto btn-block"
+                (click)="activeModal.dismiss()">Abbrechen
+        </button>
+      </div>
+    </div>
+
+  </div>
+
 </div>
 
 
