--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,5 @@
 <app-navbar></app-navbar>
-<div class="container">
-  <div class="row">
-    <div class="col">Äquivalent zur Navbar</div>
-    <div class="col">
-      <button routerLink="/">Startseite</button>
-    </div>
-    <div class="col">
-      <button (click)="navigateUser()">Profil</button>
-    </div>
-  </div>
-
-</div>
 
 <router-outlet></router-outlet>
+
+<app-footer></app-footer>
