--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light py-2">
 <div class="container-fluid" style="margin-left: 15em; margin-right:15em">
-  <button style="border: none;  background-color: Transparent;">
+  <button style="border: none;  background-color: Transparent;" (click)="navigateToMainPage()">
     <img src ="../../assets/img/Export/SVG/LKW.svg" width="180" height="75"/>
   </button>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,7 +29,7 @@
         </button>
       </li>
       <li>
-        <button style="border: none;  background-color: Transparent;">
+        <button style="border: none;  background-color: Transparent;" (click)="navigateToUser()">
           <img src="../../assets/img/Export/Icons/user_icon.png" width="43" height="43" style="float: left;">
         </button>
       </li>
