relocated authentication into service and improved some code

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,31 +3,45 @@
 
   <div class="card-body">
     <!--  Form  -->
-    <form>
-      <div class="form-row">
+    <div class="container">
+      <div class="row">
         <div class="h4 mt-2 logoGreenDark mx-auto">Login</div>
+      </div>
+      <div class="row">
         <div class="form-group col-md-12">
           <label for="inputEmail" class="logoGreenDark">Email</label>
-          <input #mail type="email" class="form-control {{wrongEmail}}" id="inputEmail" placeholder="name@example.com"
-                 (keydown)="validEmail(mail.value)">
+          <input #mail
+                 type="email"
+                 class="form-control {{wrongEmail}}"
+                 id="inputEmail"
+                 placeholder="name@example.com"
+                 (keydown)="validEmail(mail.value)"
+                 (keydown.enter)="inputCheck()"
+                 [(ngModel)]="email">
           <div *ngIf="emailMessage !== ''" class="text-danger">{{emailMessage}}</div>
         </div>
+      </div>
+
+      <div class="row">
         <div class="form-group col-md-12">
           <label for="inputPassword" class="logoGreenDark">Password</label>
-          <input #password type="password" class="form-control {{wrongPassword}}" id="inputPassword"
-                 (keypress)="validPassword(password.value)"
-                 (keydown.enter)="inputCheck(mail.value, password.value)" >
+          <input #passw
+                 type="password"
+                 class="form-control {{wrongPassword}}"
+                 id="inputPassword"
+                 (keypress)="validPassword(passw.value)"
+                 (keydown.enter)="inputCheck()"
+                 [(ngModel)]="password">
           <div *ngIf="passwordMessage !== ''" class="text-danger">{{passwordMessage}}</div>
         </div>
       </div>
-    </form>
 
-    <!--  Buttons -->
-    <div class="container ">
+
+      <!--  Buttons -->
       <div class="row justify-content-center">
-        <div class="col-6 ">
+        <div class="col-6">
           <button type="button" class="btn btn-success mx-auto m-3 btn-block"
-                  (click)="inputCheck(mail.value, password.value)">Anmelden
+                  (click)="inputCheck()">Anmelden
           </button>
         </div>
       </div>
@@ -35,7 +49,7 @@
       <div class="row justify-content-center">
         <div class="col-6">
           <button type="button" class="btn btn-dark mx-auto btn-block"
-                  (click)="openModal()">Registrieren
+                  (click)="openRegistrationModal()">Registrieren
           </button>
         </div>
       </div>
@@ -43,7 +57,6 @@
     </div>
   </div>
 
+
 </div>
-
-
 
