--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -121,7 +121,7 @@
     <div class="row justify-content-center">
       <div class="col-6 ">
         <button type="button" class="btn btn-success mx-auto m-3 btn-block"
-                (click)="register()">Registrieren
+                (click)="inputCheck()">Registrieren
         </button>
       </div>
     </div>
