added unfinished sidebar

--- a/src/app/profil/profil.component.html
+++ b/src/app/profil/profil.component.html
@@ -1,3 +1,14 @@
+
+<div class="wrapper">
+  <!--Top menu -->
+  <div class="sidebar">
+    <!--profile image & text-->
+    <!--menu item-->
+  </div>
+
+</div>
+
+
 <div class="container">
   <div class="row">
     <div class="col text-center">
