--- a/src/app/profil/profil.component.html
+++ b/src/app/profil/profil.component.html
@@ -1,15 +1,26 @@
+
+<div class="wrapper">
+  <!--Top menu -->
+  <div class="sidebar">
+    <!--profile image & text-->
+    <div class="row">
+      <div class="col text-center">
+        <img src="../../assets/img/Export/Icons/user_icon.png" width="120" height="120">
+        <button class="btn success btn-light ">Profilbild bearbeiten</button>
+        <button class="btn success btn-light ">Fahrzeuge verwalten</button>
+        <button class="btn success btn-light " (click)="logout()">Logout</button>
+        <button class="btn danger btn-danger " (click)="deleteAccount()">Account löschen</button><br>
+      </div>
+    </div>
+  </div>
+
+</div>
+
+
 <div class="container">
   <div class="row">
     <div class="col text-center">
       <div class="h3">Hi "{{authData.email}}", hier ist dein Profil</div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col text-center">
-      <button class="btn btn-light m-2">Fahrzeuge verwalten</button>
-      <button class="btn btn-outline-success m-2" (click)="logout()">Logout</button>
-      <button class="btn btn-danger m-2" (click)="deleteAccount()">Account löschen</button>
     </div>
   </div>
 </div>
