--- a/src/app/suchleiste/suchleiste.component.css
+++ b/src/app/suchleiste/suchleiste.component.css
@@ -17,3 +17,11 @@ header.masthead {
   margin: auto;
   width: 70%;
 }
+
+
+input[type="date"]::-webkit-inner-spin-button,
+input[type="date"]::-webkit-calendar-picker-indicator {
+display: none;
+-webkit-appearance: none;
+}
+
