--- a/src/app/suchleiste/suchleiste.component.html
+++ b/src/app/suchleiste/suchleiste.component.html
@@ -17,7 +17,13 @@
             <div class="col">
               <div class="input-group mb-3">
                 <span class="input-group-text" style="background-color: rgba(0, 0, 0, 0.0); border-color: rgba(0, 0, 0, 0.0)"><img src="../../assets/img/Icons/kalender_icon.png" style="width: 20px"/> </span>
-                <input type="text" placeholder="Datum" style="background-color: rgba(0, 0, 0, 0.0); color: white; border-color: rgba(0, 0, 0, 0.0); /*outline: none das hier noch auskommentieren -Serag*/">
+                <input type="date" placeholder="Datum" style="background-color: rgba(0, 0, 0, 0.0); color: white; border-color: rgba(0, 0, 0, 0.0); /*outline: none das hier noch auskommentieren -Serag*/">
+              </div>
+            </div>
+            <div class="col">
+              <div class="input-group mb-3">
+                <span class="input-group-text" style="background-color: rgba(0, 0, 0, 0.0); border-color: rgba(0, 0, 0, 0.0)"><img src="../../assets/img/Icons/koffer_icon_white.png" style="width: 20px"/> </span>
+                <input type="text" placeholder="m³" style="background-color: rgba(0, 0, 0, 0.0); color: white; border-color: rgba(0, 0, 0, 0.0); /*outline: none das hier noch auskommentieren -Serag*/">
               </div>
             </div>
           </div>
