--- a/src/app/comoponents/registration/registration.component.html
+++ b/src/app/comoponents/registration/registration.component.html
@@ -20,7 +20,7 @@
 
 
 <!--  Modal Body  -->
-<div class="modal-body">
+<div class="modal-body border-0">
 
   <div class="container">
 
@@ -29,7 +29,8 @@
         <div class="form-group">
           <label for="userLastname">Nachname</label>
           <input #ln type="text" class="form-control {{wrongLastname}}" id="userLastname" [(ngModel)]="lastname"
-                 (keydown)="validLastname(ln.value)">
+                 (keydown)="validLastname(ln.value)"
+                 (keydown.enter)="inputCheck()">
           <div *ngIf="lastnameMessage !== ''" class="text-danger">{{lastnameMessage}}</div>
         </div>
       </div>
@@ -38,7 +39,8 @@
         <div class="form-group">
           <label for="userFirstname">Vorname</label>
           <input #fn type="text" class="form-control {{wrongFirstname}}" id="userFirstname" [(ngModel)]="firstname"
-                 (keydown)="validFirstname(fn.value)">
+                 (keydown)="validFirstname(fn.value)"
+                 (keydown.enter)="inputCheck()">
           <div *ngIf="firstnameMessage !== ''" class="text-danger">{{firstnameMessage}}</div>
         </div>
       </div>
@@ -49,12 +51,15 @@
       <div class="col">
         <div class="form-group">
           <label for="">Geschlecht</label>
-          <select name="" id="" class="form-control" [(ngModel)]="gender">
+          <select #gd name="" id="" class="form-control {{wrongGender}}" [(ngModel)]="gender"
+                  (change)="validGender(gd.value)"
+                  (keydown.enter)="inputCheck()">
             <option value=""></option>
             <option value="FEMALE">Weiblich</option>
             <option value="MALE">Männlich</option>
             <option value="DIVERSE">Divers</option>
           </select>
+          <div *ngIf="genderMessage !== ''" class="text-danger">{{genderMessage}}</div>
         </div>
       </div>
 
@@ -62,7 +67,8 @@
         <div class="form-group">
           <label for="userBirthday">Geburtstag</label>
           <input #bd type="date" class="form-control {{wrongBirthday}}" id="userBirthday" [(ngModel)]="birthday"
-                 (keydown)="validBirthday(bd.value)">
+                 (change)="validBirthday(bd.value)"
+                 (keydown.enter)="inputCheck()">
           <div *ngIf="birthdayMessage !== ''" class="text-danger">{{birthdayMessage}}</div>
         </div>
       </div>
@@ -74,7 +80,8 @@
         <div class="form-group">
           <label for="userEmail">Email</label>
           <input #mail type="text" class="form-control {{wrongEmailClass}}" id="userEmail" [(ngModel)]="email"
-                 (keydown)="validEmail(mail.value)">
+                 (keydown)="validEmail(mail.value)"
+                 (keydown.enter)="inputCheck()">
           <div *ngIf="emailMessage !== ''" class="text-danger">{{emailMessage}}</div>
         </div>
       </div>
@@ -83,7 +90,8 @@
         <div class="form-group">
           <label for="userUsername">Nutzername</label>
           <input #un type="text" class="form-control {{wrongUsername}}" id="userUsername" [(ngModel)]="username"
-                 (keydown)="validUsername(un.value)">
+                 (keydown)="validUsername(un.value)"
+                 (keydown.enter)="inputCheck()">
           <div *ngIf="usernameMessage !== ''" class="text-danger">{{usernameMessage}}</div>
         </div>
       </div>
@@ -95,7 +103,8 @@
           <label for="userPassword">Passwort</label>
           <input #pw type="password" class="form-control {{wrongPasswordClass}}" id="userPassword"
                  [(ngModel)]="password"
-                 (keydown)="validPassword(pw.value)">
+                 (keydown)="validPassword(pw.value)"
+                 (keydown.enter)="inputCheck()">
           <div *ngIf="passwordMessage !== ''" class="text-danger">{{passwordMessage}}</div>
         </div>
       </div>
@@ -105,7 +114,9 @@
         <div class="form-group">
           <label for="repeatPassword">Passwort wiederholen</label>
           <input #rpw type="password" class="form-control {{wrongRepeatPasswordClass}}" id="repeatPassword"
-                 [(ngModel)]="repeatPassword" (keydown)="validRepeatPassword(rpw.value)">
+                 [(ngModel)]="repeatPassword"
+                 (keydown)="validRepeatPassword(rpw.value)"
+                 (keydown.enter)="inputCheck()">
           <div *ngIf="passwordRepeatMessage !== ''" class="text-danger">{{passwordRepeatMessage}}</div>
         </div>
       </div>
