--- a/src/app/comoponents/navbar/navbar.component.html
+++ b/src/app/comoponents/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light py-2">
 <div class="container-fluid" style="margin-left: 15em; margin-right:15em">
-  <button style="border: none;  background-color: Transparent;">
-    <img src ="../../assets/img/Export/SVG/LKW.svg" width="180" height="75"/>
+  <button style="border: none;  background-color: Transparent;" (click)="navigateToMainPage()">
+    <img src ="../../../assets/img/Export/SVG/LKW.svg" width="180" height="75"/>
   </button>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -18,19 +18,19 @@
     <ul class="navbar-nav me-auto my-2 my-lg-0">
       <li class="nav-item" style="margin-right: 14px" href="#">
         <button style="border: none;  background-color: Transparent;">
-          <img src="../../assets/img/Export/Icons/search_icon.png" width="30" height="30" style="float: left; margin-top: 7px">
+          <img src="../../../assets/img/Export/Icons/search_icon.png" width="30" height="30" style="float: left; margin-top: 7px">
           <a class="nav-link active" style="color: #005B51;float: left; font-size: 20px; font-style: italic; font-family: Arial">Suchen</a>
         </button>
       </li>
       <li class="nav-item" style="margin-right: 12px">
         <button style="border: none;  background-color: Transparent;">
-          <img src="../../assets/img/Export/Icons/add_icon.png" width="30" height="30" style="float: left; margin-top: 7px">
+          <img src="../../../assets/img/Export/Icons/add_icon.png" width="30" height="30" style="float: left; margin-top: 7px">
           <a class="nav-link active" href="#" style="color: #005B51;float: left; font-size: 20px; font-style: italic; font-family: Arial">Angebot & Anfrage erstellen</a>
         </button>
       </li>
       <li>
-        <button style="border: none;  background-color: Transparent;">
-          <img src="../../assets/img/Export/Icons/user_icon.png" width="43" height="43" style="float: left;">
+        <button style="border: none;  background-color: Transparent;" (click)="navigateToUser()">
+          <img src="../../../assets/img/Export/Icons/user_icon.png" width="43" height="43" style="float: left;">
         </button>
       </li>
     </ul>
