--- a/src/app/components/profil/loggedin/loggedin.component.html
+++ b/src/app/components/profil/loggedin/loggedin.component.html
@@ -4,7 +4,7 @@
     <!--profile image & text-->
     <div class="row">
       <div class="col text-center">
-        <img src="../../../assets/img/Export/Icons/user_icon.png" width="120" height="120">
+        <img src="../../../../assets/img/Export/Icons/user_icon.png" width="120" height="120">
         <button class="btn success btn-light ">Profilbild bearbeiten</button>
         <button class="btn success btn-light ">Fahrzeuge verwalten</button>
         <button class="btn success btn-light " (click)="logout()">Logout</button>
