--- a/src/app/suchleiste/suchleiste.component.css
+++ b/src/app/suchleiste/suchleiste.component.css
@@ -4,6 +4,7 @@ header.masthead {
   background-color: #343a40;
   background: url("../../assets/img/SVG/Zeichenflache_4.svg") no-repeat center center;
   background-size: cover;
+  min-height: 380px;
   padding-top: 8rem;
   padding-bottom: 8rem;
 }
