--- a/src/app/components/profil/loggedin/loggedin.component.html
+++ b/src/app/components/profil/loggedin/loggedin.component.html
@@ -6,7 +6,7 @@
       <div class="col text-center">
         <img src="../../../../assets/img/Export/Icons/user_icon.png" width="120" height="120">
         <button class="btn success btn-light ">Profilbild bearbeiten</button>
-        <button class="btn success btn-light ">Fahrzeuge verwalten</button>
+        <button class="btn success btn-light" (click)="navigateToCarList()">Fahrzeuge verwalten</button>
         <button class="btn success btn-light " (click)="logout()">Logout</button>
         <button class="btn danger btn-danger " (click)="deleteAccount()">Account löschen</button><br>
       </div>
