--- a/src/app/suchleiste/suchleiste.component.html
+++ b/src/app/suchleiste/suchleiste.component.html
@@ -1,30 +1,49 @@
 <header class="masthead">
     <div class="center">
-       <h1 style="color: #005B51; text-align: center; margin-bottom: 20px">Wir fahren, du sparst!</h1>
-          <div class="form-row" style="background-color: rgba(0, 0, 0, 0.3); backdrop-filter: blur(5px); border-radius: 20px; position: center">
-            <div class="col">
-              <div class="input-group mb-3">
-                  <span class="input-group-text" style="background-color: rgba(0, 0, 0, 0.0); border-color: rgba(0, 0, 0, 0.0)"><img src="../../assets/img/Icons/von_icon.png" style="width: 20px"/> </span>
-                <input type="text" placeholder="Von..." style="background-color: rgba(0, 0, 0, 0.0); color: white; border-color: rgba(0, 0, 0, 0.0); /*outline: none das hier noch auskommentieren -Serag*/">
+       <h1 style="font-size: 4em; color: #005B51; text-align: center; margin-bottom: 20px">Wir fahren, du sparst!</h1>
+          <div class="form-row form-row-style align-items-center" style="height: {{searchbarheigth}}">
+            <div class="col colpad">
+              <div class="input-group mb-3 border-right" style="height: {{searchbarheigth}}">
+                <div class="row">
+                  <span class="input-group-text input-opaque" ><img src="../../assets/img/Icons/von_icon.png" style="width: {{iconsize}}; margin-left: 10px"/> </span>
+                <input class="text-opaque" type="text" placeholder="Von...">
+                </div>
               </div>
             </div>
-            <div class="col">
-              <div class="input-group mb-3">
-                <span class="input-group-text" style="background-color: rgba(0, 0, 0, 0.0); border-color: rgba(0, 0, 0, 0.0)"><img src="../../assets/img/Icons/nach_icon.png" style="width: 20px"/> </span>
-                <input type="text" placeholder="Nach..." style="background-color: rgba(0, 0, 0, 0.0); color: white; border-color: rgba(0, 0, 0, 0.0); /*outline: none das hier noch auskommentieren -Serag*/">
+            <div class="col colpad">
+              <div class="input-group mb-3 border-right" style="height: {{searchbarheigth}}">
+                <div class="row">
+                <span class="input-group-text input-opaque"><img src="../../assets/img/Icons/nach_icon.png" style="width: {{iconsize}}; margin-left: 10px"/> </span>
+                <input class="text-opaque" type="text" placeholder="Nach...">
+                </div>
               </div>
             </div>
-            <div class="col">
-              <div class="input-group mb-3">
-                <span class="input-group-text" style="background-color: rgba(0, 0, 0, 0.0); border-color: rgba(0, 0, 0, 0.0)"><img src="../../assets/img/Icons/kalender_icon.png" style="width: 20px"/> </span>
-                <input type="date" placeholder="Datum" style="background-color: rgba(0, 0, 0, 0.0); color: white; border-color: rgba(0, 0, 0, 0.0); /*outline: none das hier noch auskommentieren -Serag*/">
+            <div class="col colpad">
+              <div class="input-group mb-3 border-right" style="height: {{searchbarheigth}}">
+                <div class="row">
+                <span class="input-group-text input-opaque" ><img src="../../assets/img/Icons/kalender_icon.png" style="width: {{iconsize}}; margin-left: 10px"/> </span>
+                <input class="text-opaque" type="date" placeholder="Datum">
+                </div>
               </div>
             </div>
-            <div class="col">
-              <div class="input-group mb-3">
-                <span class="input-group-text" style="background-color: rgba(0, 0, 0, 0.0); border-color: rgba(0, 0, 0, 0.0)"><img src="../../assets/img/Icons/koffer_icon_white.png" style="width: 20px"/> </span>
-                <input type="text" placeholder="m³" style="background-color: rgba(0, 0, 0, 0.0); color: white; border-color: rgba(0, 0, 0, 0.0); /*outline: none das hier noch auskommentieren -Serag*/">
+            <div class="col colpad" >
+              <div class="input-group mb-3 border-right" style="height: {{searchbarheigth}}">
+                <div class="row">
+                <span class="input-group-text input-opaque"><img src="../../assets/img/Icons/koffer_icon_white.png" style="width: {{iconsize}}; margin-left: 10px"/> </span>
+                <input class="text-opaque" type="text" placeholder="m³">
+                </div>
               </div>
+            </div>
+            <div class="col colpad">
+              <div class="input-group mb-3 border-right" style="height: {{searchbarheigth}}">
+                <div class="row">
+                  <span class="input-group-text input-opaque" ><img src="../../assets/img/Icons/mitfahrer_icon_white.png" style="width: {{iconsize}}; margin-left: 10px"/> </span>
+                  <input class="text-opaque" type="text" placeholder="1">
+                </div>
+              </div>
+            </div>
+            <div class="col colpad">
+              <button type="button" class="btn btn-primary btn-block " style="margin-top: -1em; background-color: #005B51;  height: {{searchbarheigth}}; border-radius: 0px 35px 35px 0px"><h3>Suchen</h3></button>
             </div>
           </div>
 
