Added Cars to User, deleteable and create acrs for an user

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light py-2">
+<nav class="navbar navbar-expand-xl navbar-light bg-light py-2">
 <div class="container-fluid" style="margin-left: 15em; margin-right:15em">
   <button style="border: none;  background-color: Transparent;" (click)="navigateToMainPage()">
     <img src ="../../../assets/img/Export/SVG/LKW.svg" width="180" height="75"/>
