added some functions for the tour.service.ts and fixed a bug for updating users

--- a/src/app/components/profil/loggedin/loggedin.component.html
+++ b/src/app/components/profil/loggedin/loggedin.component.html
@@ -19,7 +19,7 @@
 <div class="container">
   <div class="row">
     <div class="col text-center">
-      <div class="h3">Hi "{{this.userData.currUser.firstname}}", hier ist dein Profil</div>
+      <div class="h3" *ngIf="userData.currUser">Hi "{{this.userData.currUser.firstname}}", hier ist dein Profil</div>
     </div>
   </div>
 </div>
