--- a/src/app/components/carlist/car-item/car-item.component.html
+++ b/src/app/components/carlist/car-item/car-item.component.html
@@ -4,7 +4,7 @@
     <p class="card-text">{{car.mark}}</p>
     <p class=" card text">{{car.seats}} Plätze</p>
     <p class="card text" >{{car.storage}} ㎥</p>
-    <a class="btn btn-primary btn-light mr-1" (click)="editEvent.emit()">Edit</a>
+<!--    <a class="btn btn-primary btn-light mr-1" (click)="editEvent.emit()">Edit</a>-->
     <a class="btn btn-primary btn-danger ml-1" (click)="deleteEvent.emit()">Delete</a>
   </div>
 </div>
