added title, forms and button

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -23,9 +23,9 @@
           </button>
         </li>
         <li class="nav-item" style="margin-right: 12px">
-          <button style="border: none;  background-color: Transparent;">
+          <button style="border: none;  background-color: Transparent;" (click)="navigateToCreateTourPage()">
             <img src="../../../assets/img/Icons/add_icon.png" width="30" height="30" style="float: left; margin-top: 7px">
-            <a class="nav-link active" href="#" style="color: #005B51;float: left; font-size: 20px; font-style: italic; font-family: Arial">Angebot & Anfrage erstellen</a>
+            <a class="nav-link active" style="color: #005B51;float: left; font-size: 20px; font-style: italic; font-family: Arial">Angebot & Anfrage erstellen</a>
           </button>
         </li>
         <li>
