--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
-<div class="footer">
+<footer class="footer">
   <div class="containter">
     <div class="row">
       <div class="col bg-light pb-2 pl-5 pt-2">©Cargonaut</div>
     </div>
   </div>
-</div>
+</footer>
