fixed width of range-element

--- a/src/app/components/create-tours/create-tours.component.html
+++ b/src/app/components/create-tours/create-tours.component.html
@@ -26,7 +26,7 @@
 </div>
 
 <!-- Create-Form -->
-<div class="container rounded shadow container mt-5 bg-white border-0">
+<div class="container rounded shadow container mt-4 bg-white border-0">
   <div class="row m-4">
     <!--    <div class="col text-center h4 logoGreenDark m-3" *ngIf="on">Anfrage erstellen</div>-->
     <!--    <div class="col text-center h4 logoGreenDark m-3" *ngIf="!on">Angebot erstellen</div>-->
@@ -135,7 +135,7 @@
       <div class="">
         <!--        null komma null responsiv -->
         <input type="range" class="form-range mt-2" min="0" max="500" id="customRange3" [(ngModel)]="price"
-               style="width: 25vw">
+               style="min-width: 100%; max-width: 100%">
       </div>
     </div>
   </div>
