--- a/src/app/components/create-tours/create-tours.component.html
+++ b/src/app/components/create-tours/create-tours.component.html
@@ -49,7 +49,7 @@
     <div class="col">
       <div class="form-group">
         <label class="logoGreenDark" for="date">Datum</label>
-        <input type="date" class="form-control" id="date" [(ngModel)]="date">
+        <input type="date" class="form-control" id="date" [(ngModel)]="date" (change)="calculateEndTime()" >
       </div>
     </div>
 
