--- a/src/app/components/create-tours/create-tours.component.html
+++ b/src/app/components/create-tours/create-tours.component.html
@@ -145,6 +145,11 @@
       <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" [(ngModel)]="description" ></textarea>
     </div>
   </div>
+  <div class="row">
+    <div class="col">
+      <div class="danger">Melde dich erst an!</div>
+    </div>
+  </div>
   <div class="row justify-content-center">
     <div class="col-5 m-4">
       <button class="btn btn-success btn-block" (click)="addTour()">Erstellen</button>
