KMSWS21T04-48 - Creating Tours (#15)
* Initial commit

* added title, forms and button

* updated forms and global styles

* fixed width of range-element

* not allowed to create a tour for unlogged users

* Added functionality to calculate and display correct arrival time and date

* Fixed bugs for displaying the arrival date and time

* added allerts

* added alerts and "notloggedin"-screen

* bug fix

Co-authored-by: Serageldin <serageldin.el-khodary@mni.thm.de>

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,16 @@
 .logoGreenDark {
   color: #005B51;
 }
+
+.logoGreenLight {
+  color: #F3FBED;
+}
+
+.logoGreenMedium {
+  color: #208479;
+}
+
+body {
+  height: 100%;
+  min-height: 100%;
+}
