--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
+<app-alerts></app-alerts>
+
+
 <app-navbar></app-navbar>
 
-<router-outlet></router-outlet>
 
+<router-outlet></router-outlet>
 
 <app-footer></app-footer>
 
