added html card without functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,96 @@
 <app-alerts></app-alerts>
 
-
 <app-navbar></app-navbar>
 
 <router-outlet></router-outlet>
+
+<app-tour-card [tours]="tours"></app-tour-card>
+
+<div class="">
+  <h2 class="logoGreenDark">Deine Fahrten</h2>
+</div>
+
+<div class="container-fluid">
+  <div class="row flex-row flex-nowrap scrolling-wrapper">
+    <div class="col-6">
+      <app-tour-card [tours]="tours"></app-tour-card>
+
+    </div>
+    <div class="col-6">
+      <app-tour-card [tours]="tours"></app-tour-card>
+
+    </div>
+    <div class="col-6">
+      <app-tour-card [tours]="tours"></app-tour-card>
+
+    </div>
+    <div class="col-6">
+      <app-tour-card [tours]="tours"></app-tour-card>
+
+    </div>
+    <div class="col-6">
+      <app-tour-card [tours]="tours"></app-tour-card>
+
+    </div>
+    <div class="col-6">
+      <app-tour-card [tours]="tours"></app-tour-card>
+
+    </div>
+    <div class="col-6">
+      <app-tour-card [tours]="tours"></app-tour-card>
+
+    </div>
+    <div class="col-6">
+      <app-tour-card [tours]="tours"></app-tour-card>
+
+    </div>
+  </div>
+</div>
+
+
+<div class="mt-5">
+  <h2 class="logoGreenDark">Du wirst gefahren</h2>
+</div>
+
+<div class="container-fluid">
+  <div class="row flex-row flex-nowrap scrolling-wrapper">
+    <div class="col-6">
+      <app-tour-card [tours]="tours"></app-tour-card>
+
+    </div>
+    <div class="col-6">
+      <app-tour-card [tours]="tours"></app-tour-card>
+
+    </div>
+    <div class="col-6">
+      <app-tour-card [tours]="tours"></app-tour-card>
+
+    </div>
+    <div class="col-6">
+      <app-tour-card [tours]="tours"></app-tour-card>
+
+    </div>
+    <div class="col-6">
+      <app-tour-card [tours]="tours"></app-tour-card>
+
+    </div>
+    <div class="col-6">
+      <app-tour-card [tours]="tours"></app-tour-card>
+
+    </div>
+    <div class="col-6">
+      <app-tour-card [tours]="tours"></app-tour-card>
+
+    </div>
+    <div class="col-6">
+      <app-tour-card [tours]="tours"></app-tour-card>
+
+    </div>
+  </div>
+</div>
+
+<div style="height: 200px"></div>
+
 
 <app-footer></app-footer>
 
