--- a/src/app/components/create-tours/create-tours.component.html
+++ b/src/app/components/create-tours/create-tours.component.html
@@ -25,7 +25,7 @@
   </div>
 
   <!-- Create-Form -->
-  <div class="container rounded shadow container mt-4 bg-white border-0">
+  <div class="container rounded shadow mt-4 bg-white border-0">
     <div class="row m-4">
       <!--    <div class="col text-center h4 logoGreenDark m-3" *ngIf="on">Anfrage erstellen</div>-->
       <!--    <div class="col text-center h4 logoGreenDark m-3" *ngIf="!on">Angebot erstellen</div>-->
