added tour-list and tourSite Component

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -9,7 +9,9 @@
     <div class="collapse navbar-collapse mr-auto" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#" style="color: #005B51; font-size: 20px; font-style: italic; font-family: Arial">Mitfahrgelegenheit</a>
+          <button style="border: none;  background-color: Transparent;">
+            <a class="nav-link active" aria-current="page" style="color: #005B51; font-size: 20px; font-style: italic; font-family: Arial" (click)="navigateToTours()">Mitfahrgelegenheit</a>
+          </button>
         </li>
         <li class="nav-item">
           <a class="nav-link active" href="#" style="color: #005B51; font-size: 20px; font-style: italic; font-family: Arial">Meine Angebote & Anfragen</a>
