--- a/src/app/components/tour-list/tour-list.component.html
+++ b/src/app/components/tour-list/tour-list.component.html
@@ -1,1 +1,7 @@
-<p>tour-list works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col" *ngFor="let tour of tours; let i = index">
+      <h1>{{tour.price}}</h1>
+    </div>
+  </div>
+</div>
