added slideChecker and decide between offers and requests

--- a/src/app/components/tour-site/tour-site.component.html
+++ b/src/app/components/tour-site/tour-site.component.html
@@ -1,2 +1,5 @@
 <app-suchleiste></app-suchleiste>
-<app-tour-list></app-tour-list>
+
+<app-slide-checker (changeState)="offerOnOff()"></app-slide-checker>
+
+<app-tour-list [isOffer]="isOffer"></app-tour-list>
