--- a/src/app/components/tour-card/tour-card.component.html
+++ b/src/app/components/tour-card/tour-card.component.html
@@ -17,7 +17,7 @@
 
         <div class="col-4">
           <div class="text-right">
-            <span class="mr-2 logoGreenDark">{{this.tour.driver}}</span>
+            <span class="mr-2 logoGreenDark">{{userName}}</span>
             <svg class="profil" xmlns="http://www.w3.org/2000/svg" width="2em" viewBox="0 0 65 65">
               <path id="ic_account_circle_24px" d="M34.5,2A32.5,32.5,0,1,0,67,34.5,32.512,32.512,0,0,0,34.5,2Zm0,9.75a9.75,9.75,0,1,1-9.75,9.75A9.737,9.737,0,0,1,34.5,11.75Zm0,46.15A23.4,23.4,0,0,1,15,47.435c.1-6.468,13-10.01,19.5-10.01,6.467,0,19.4,3.542,19.5,10.01A23.4,23.4,0,0,1,34.5,57.9Z" transform="translate(-2 -2)" fill="#208479"/>
             </svg>
